# ravenvault-chrome

./: .gitignore  .~lock.README.md#  NOTICE.md  README.md  background.js  config.js  content.js  manifest.json  popup.html  popup.js  ui-constants.js
.github/workflows/: ci.yml
docs/: CHROME_STORE.md  LINUX_DEVELOPMENT_PLAN.md  PROTOCOL.md  SNAP.md  TODO.md
linux-app/: Cargo.toml  README.md  USAGE.md
linux-app/examples/: convert.rs
linux-app/gui/: Cargo.toml  tauri.conf.json
linux-app/gui/capabilities/: default.json
linux-app/gui/src/: main.rs
linux-app/packaging/: install.sh  ravenvault-open  ravenvault.desktop  ravenvault.service  uninstall.sh
linux-app/scripts/: check.sh
linux-app/snap/: snapcraft.yaml
linux-app/snap/local/: launcher  poe2obsidian.desktop  ravenvault.desktop
linux-app/src/: client.rs  context.rs  export.rs  html2md.rs  lib.rs  main.rs  manifest.rs  mcp.rs  mempalace.rs  protocol.rs  relate.rs  server.rs  vault.rs
linux-app/tests/: bulk_export.rs  export_flow.rs  handshake.rs  pipeline.rs
linux-app/tests/fixtures/: poe_real_sample.html  poe_sample.html
scripts/: package-extension.sh
