[package]
name = "ravenvault"
version = "0.9.1"
edition = "2021"
rust-version = "1.80"
description = "RavenVault Linux companion app — exports Poe.com conversations to Obsidian"
license = "MIT"
repository = "https://github.com/ravenvault/ravenvault-chrome"
default-run = "ravenvault"

[lib]
name = "ravenvault"
path = "src/lib.rs"

[[bin]]
name = "ravenvault"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]

[profile.release]
strip = true
lto = "thin"
