[package]
name = "ravenvault"
version = "0.9.1"
edition = "2021"
rust-version = "1.80"
description = "RavenVault Linux companion app — exports Poe.com conversations to Obsidian"
license = "MIT"
repository = "https://github.com/ravenvault/ravenvault-chrome"
default-run = "ravenvault"

[lib]
name = "ravenvault"
path = "src/lib.rs"

[[bin]]
name = "ravenvault"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"

[dev-dependencies]

[profile.release]
strip = true
lto = "thin"
