[package]
name = "ravenvault-gui"
version = "0.9.1"
edition = "2021"
rust-version = "1.80"
description = "RavenVault — Linux desktop tray app (Poe.com to Obsidian)"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ravenvault = { path = ".." }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
